--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,7 @@
 services:
   - type: web
-    name: task-hub-api
+    name: task-hub-server
     env: docker
-    region: frankfurt # или выберите другой регион
-    plan: free # или выберите другой план
+    region: frankfurt
+    plan: free
     healthCheckPath: /health
-    envVars:
-      - key: PORT
-        value: 8080
-      - key: DATABASE_URL
-        sync: false # Это означает, что значение нужно будет установить в Render dashboard
-      - key: ALLOWED_ORIGINS
-        sync: false
